--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -35,30 +35,24 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 2vw; /* Using vw for better responsiveness */
+            gap: 1.5vw; /* Slightly adjusted gap */
         }
 
         .image-item {
             position: relative;
             cursor: pointer;
-            width: 200px; /* Set fixed width */
-            height: 200px; /* Set fixed height */
+            width: 120px; /* Decreased width */
+            height: 120px; /* Decreased height */
             display: flex;
             justify-content: center;
             align-items: center;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Adds a shadow to create a card effect */
+            /* Removed box-shadow and border */
         }
 
         .image-item img {
-            width: 100%; /* Fill the container width */
-            height: 100%; /* Fill the container height */
+            width: 100%; /* Ensure the image fits the container */
+            height: 100%; /* Ensure the image fills the container */
             object-fit: cover; /* Ensures that the image covers the entire container without distortion */
-            transition: transform 0.3s ease;
-        }
-
-        /* Image scaling on hover */
-        .image-item img:hover {
-            transform: scale(1.05); /* Slight zoom effect */
         }
 
         /* Position caption at the bottom */
@@ -130,15 +124,15 @@
         /* Mobile Responsiveness */
         @media (max-width: 768px) {
             .image-item {
-                width: 150px; /* Adjusted for tablet or medium-sized screens */
-                height: 150px; /* Same height */
+                width: 100px; /* Further decrease for tablets */
+                height: 100px; /* Same height */
             }
         }
 
         @media (max-width: 480px) {
             .image-item {
-                width: 120px; /* Adjusted for smaller mobile screens */
-                height: 120px; /* Same height */
+                width: 80px; /* Further decrease for mobile */
+                height: 80px; /* Same height */
             }
         }
 
