--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -41,20 +41,21 @@
         .image-item {
             position: relative;
             cursor: pointer;
-            width: 15vw; /* Adjusted width to use viewport-based resizing */
-            height: 15vw; /* Height matches the width for a square aspect */
-            max-width: 150px; /* Maximum size for larger screens */
-            max-height: 150px; /* Maximum height */
+            width: 30vw; /* Adjusted width to use viewport-based resizing */
+            height: auto; /* Height adjusts based on aspect ratio */
+            max-width: 200px; /* Maximum size for larger screens */
+            max-height: 200px; /* Maximum height */
             display: flex;
             justify-content: center;
             align-items: center;
-            /* Removed box-shadow and border */
+            overflow: hidden; /* Prevents overflow of the image */
         }
 
         .image-item img {
             width: 100%; /* Ensure the image fits the container */
-            height: 100%; /* Ensure the image fills the container */
-            object-fit: cover; /* Ensures that the image covers the entire container without distortion */
+            height: auto; /* Ensure aspect ratio is maintained */
+            object-fit: contain; /* Ensures the image fits inside the container without stretching */
+            border-radius: 8px; /* Optional: Adds rounded corners */
         }
 
         /* Position caption at the bottom */
@@ -126,19 +127,15 @@
         /* Mobile Responsiveness */
         @media (max-width: 768px) {
             .image-item {
-                width: 25vw; /* Larger for tablets */
-                height: 25vw; /* Same height */
-                max-width: 100px; /* Maximum size for tablets */
-                max-height: 100px;
+                width: 40vw; /* Larger for tablets */
+                max-width: 150px; /* Maximum size for tablets */
             }
         }
 
         @media (max-width: 480px) {
             .image-item {
-                width: 40vw; /* Larger for small mobile screens */
-                height: 40vw; /* Same height */
-                max-width: 80px; /* Maximum size for smaller mobile screens */
-                max-height: 80px;
+                width: 50vw; /* Larger for small mobile screens */
+                max-width: 100px; /* Maximum size for smaller mobile screens */
             }
         }
 
