--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -35,40 +35,27 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 2vw; /* Gap between the images */
+            gap: 2vw;
         }
 
         .image-item {
             position: relative;
             cursor: pointer;
             width: 30vw; /* Adjusted width to use viewport-based resizing */
-            height: auto; /* Height adjusts based on aspect ratio */
-            max-width: 200px; /* Maximum size for larger screens */
-            max-height: 200px; /* Maximum height */
+            height: auto;
+            max-width: 200px;
+            max-height: 200px;
             display: flex;
             justify-content: center;
             align-items: center;
-            overflow: hidden; /* Prevents overflow of the image */
+            overflow: hidden;
         }
 
         .image-item img {
-            width: 100%; /* Ensure the image fits the container */
-            height: auto; /* Ensure aspect ratio is maintained */
-            object-fit: contain; /* Ensures the image fits inside the container without stretching */
-            border-radius: 8px; /* Optional: Adds rounded corners */
-        }
-
-        /* Position caption at the bottom */
-        .caption {
-            position: absolute;
-            bottom: 0;
             width: 100%;
-            text-align: center;
-            color: white;
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 5px;
-            border-radius: 5px;
-            margin: 0;
+            height: auto;
+            object-fit: contain;
+            border-radius: 8px;
         }
 
         /* Modal (Full-Screen View) */
@@ -87,12 +74,17 @@
 
         .modal-content {
             position: relative;
-            max-width: 80%; /* Reduced from 90% to 80% */
-            max-height: 80%; /* Reduced from 90% to 80% */
+            max-width: 90%;
+            max-height: 90%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .modal-content img {
-            width: 100%;
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
             height: auto;
             border-radius: 8px;
         }
@@ -127,15 +119,15 @@
         /* Mobile Responsiveness */
         @media (max-width: 768px) {
             .image-item {
-                width: 40vw; /* Larger for tablets */
-                max-width: 150px; /* Maximum size for tablets */
+                width: 40vw;
+                max-width: 150px;
             }
         }
 
         @media (max-width: 480px) {
             .image-item {
-                width: 50vw; /* Larger for small mobile screens */
-                max-width: 100px; /* Maximum size for smaller mobile screens */
+                width: 50vw;
+                max-width: 100px;
             }
         }
 
@@ -172,23 +164,20 @@
             </div>
         </div>
     </nav>
+
     <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
     <div class="image-gallery">
         <div class="image-item" onclick="openModal(0)">
             <img src="./gallery/aa.jpg" alt="Image 1">
-            <div class="caption">Caption for Image 1</div>
         </div>
         <div class="image-item" onclick="openModal(1)">
             <img src="./gallery/ff.jpg" alt="Image 2">
-            <div class="caption">Caption for Image 2</div>
         </div>
         <div class="image-item" onclick="openModal(2)">
             <img src="./gallery/kk.jpg" alt="Image 3">
-            <div class="caption">Caption for Image 3</div>
         </div>
         <div class="image-item" onclick="openModal(3)">
             <img src="./gallery/jj.jpg" alt="Image 4">
-            <div class="caption">Caption for Image 4</div>
         </div>
     </div>
 
@@ -199,7 +188,6 @@
         <span class="modal-nav modal-next" onclick="changeImage(1)">&#10095;</span>
         <div class="modal-content">
             <img id="fullImage" src="" alt="Full Image">
-            <div id="modalCaption" class="caption"></div>
         </div>
     </div>
 
@@ -214,8 +202,8 @@
 
         function openModal(index) {
             currentImageIndex = index;
-            const { src, caption } = images[currentImageIndex];
-            updateModalContent(src, caption);
+            const { src } = images[currentImageIndex];
+            updateModalContent(src);
             const modal = document.getElementById("imageModal");
             modal.style.display = "flex";
             modal.classList.add('show');
@@ -228,13 +216,12 @@
             } else if (currentImageIndex >= images.length) {
                 currentImageIndex = 0;
             }
-            const { src, caption } = images[currentImageIndex];
-            updateModalContent(src, caption);
+            const { src } = images[currentImageIndex];
+            updateModalContent(src);
         }
 
-        function updateModalContent(imageSrc, captionText) {
+        function updateModalContent(imageSrc) {
             document.getElementById("fullImage").src = imageSrc;
-            document.getElementById("modalCaption").innerText = captionText;
         }
 
         function closeModal() {
