--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -41,10 +41,10 @@
         .image-item {
             position: relative;
             cursor: pointer;
-            width: 30vw; /* Adjusted width to use viewport-based resizing */
-            height: auto;
-            max-width: 200px;
-            max-height: 200px;
+            width: 25vw; /* Equal width */
+            height: 25vw; /* Equal height (to make square images) */
+            max-width: 250px; /* Max size */
+            max-height: 250px; /* Max size */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -53,8 +53,8 @@
 
         .image-item img {
             width: 100%;
-            height: auto;
-            object-fit: contain;
+            height: 100%;
+            object-fit: cover; /* Ensures the image covers the entire container without stretching */
             border-radius: 8px;
         }
 
@@ -119,15 +119,19 @@
         /* Mobile Responsiveness */
         @media (max-width: 768px) {
             .image-item {
-                width: 40vw;
-                max-width: 150px;
+                width: 40vw; /* Adjusted width for medium screens */
+                height: 40vw; /* Same height */
+                max-width: 200px;
+                max-height: 200px;
             }
         }
 
         @media (max-width: 480px) {
             .image-item {
-                width: 50vw;
-                max-width: 100px;
+                width: 50vw; /* Adjusted width for smaller screens */
+                height: 50vw; /* Same height */
+                max-width: 150px;
+                max-height: 150px;
             }
         }
 
