--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -31,7 +31,7 @@
         /* Image Gallery */
         .image-gallery {
             width: 100%;
-            padding: 20px;
+            
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -55,7 +55,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover; /* Ensures the image covers the entire container without stretching */
-            border-radius: 8px;
+            border-radius: 4px;
         }
 
         /* Modal (Full-Screen View) */
@@ -86,7 +86,7 @@
             max-height: 100%;
             width: auto;
             height: auto;
-            border-radius: 8px;
+            border-radius: 4px;
         }
 
         .modal-close {
@@ -252,6 +252,6 @@
             });
         });
     </script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
