--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -35,7 +35,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 2vw;
+            gap: 1vw;
         }
 
         .image-item {
@@ -173,6 +173,8 @@
     <div class="image-gallery">
         <div class="image-item" onclick="openModal(0)">
             <img src="./gallery/aa.jpg" alt="Image 1">
+             <img src="./gallery/ff.jpg" alt="Image 2">
+             <img src="./gallery/jj.jpg" alt="Image 2">
         </div>
         <div class="image-item" onclick="openModal(1)">
             <img src="./gallery/ff.jpg" alt="Image 2">
