--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -29,9 +29,14 @@
         }
 
         /* Image Gallery */
+        .image-gallery-container {
+            max-width: 80%; /* Limit the width of the gallery container */
+            margin: 0 auto; /* Center the gallery */
+            padding: 20px;
+        }
+
         .image-gallery {
             width: 100%;
-            
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
@@ -170,20 +175,29 @@
     </nav>
 
     <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
-    <div class="image-gallery">
-        <div class="image-item" onclick="openModal(0)">
-            <img src="./gallery/aa.jpg" alt="Image 1">
-             <img src="./gallery/ff.jpg" alt="Image 2">
-             <img src="./gallery/jj.jpg" alt="Image 2">
-        </div>
-        <div class="image-item" onclick="openModal(1)">
-            <img src="./gallery/ff.jpg" alt="Image 2">
-        </div>
-        <div class="image-item" onclick="openModal(2)">
-            <img src="./gallery/kk.jpg" alt="Image 3">
-        </div>
-        <div class="image-item" onclick="openModal(3)">
-            <img src="./gallery/jj.jpg" alt="Image 4">
+
+    <div class="image-gallery-container">
+        <div class="image-gallery">
+            <!-- Each image is now placed in the image-item container -->
+            <div class="image-item" onclick="openModal(0)">
+                <img src="./gallery/aa.jpg" alt="Image 1">
+            </div>
+            <div class="image-item" onclick="openModal(1)">
+                <img src="./gallery/ff.jpg" alt="Image 2">
+            </div>
+            <div class="image-item" onclick="openModal(2)">
+                <img src="./gallery/jj.jpg" alt="Image 3">
+            </div>
+            <div class="image-item" onclick="openModal(3)">
+                <img src="./gallery/kk.jpg" alt="Image 4">
+            </div>
+            <!-- Additional Images -->
+            <div class="image-item" onclick="openModal(4)">
+                <img src="./gallery/zz.jpg" alt="Image 5">
+            </div>
+            <div class="image-item" onclick="openModal(5)">
+                <img src="./gallery/xx.jpg" alt="Image 6">
+            </div>
         </div>
     </div>
 
@@ -202,8 +216,10 @@
         const images = [
             { src: "./gallery/aa.jpg", caption: "Caption for Image 1" },
             { src: "./gallery/ff.jpg", caption: "Caption for Image 2" },
-            { src: "./gallery/kk.jpg", caption: "Caption for Image 3" },
-            { src: "./gallery/jj.jpg", caption: "Caption for Image 4" }
+            { src: "./gallery/jj.jpg", caption: "Caption for Image 3" },
+            { src: "./gallery/kk.jpg", caption: "Caption for Image 4" },
+            { src: "./gallery/zz.jpg", caption: "Caption for Image 5" },
+            { src: "./gallery/xx.jpg", caption: "Caption for Image 6" }
         ];
 
         function openModal(index) {
