--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -36,7 +36,8 @@
             padding: 20px; /* Padding around the gallery */
             background-color: #fff; /* Light background color for the container */
             border-radius: 10px; /* Slight rounding of corners */
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1); /* Adds a subtle shadow around the container */
+            /* Removed box-shadow for no borders */
+            box-shadow: none;
         }
 
         /* Image Gallery */
@@ -59,13 +60,16 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
+            /* Removed border-radius to make it sharp-edged */
+            border-radius: 0;
         }
 
         .image-item img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            border-radius: 4px;
+            /* Removed border-radius here too */
+            border-radius: 0;
         }
 
         /* Modal (Full-Screen View) */
@@ -96,7 +100,7 @@
             max-height: 100%;
             width: auto;
             height: auto;
-            border-radius: 4px;
+            border-radius: 0; /* No border-radius */
         }
 
         .modal-close {
