--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -28,48 +28,39 @@
             border-radius: 0.25rem;
         }
 
-        /* Container for Image Gallery */
-        .gallery-container {
-            width: 80%; /* Controls the width of the gallery container */
-            max-width: 1200px; /* Maximum width to keep the gallery from stretching too much on large screens */
-            margin: 20px auto; /* Centers the container with some space at the top and bottom */
-            padding: 20px; /* Padding around the gallery */
-            background-color: #fff; /* Light background color for the container */
-            border-radius: 10px; /* Slight rounding of corners */
-            /* Removed box-shadow for no borders */
-            box-shadow: none;
-        }
-
         /* Image Gallery */
-        .image-gallery {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr); /* 4 columns */
-            gap: 1vw;
-            justify-items: center; /* Centers images within each grid cell */
+        .image-gallery-container {
+            max-width: 80%; /* Limit the width of the gallery container */
+            margin: 0 auto; /* Center the gallery */
+            padding: 20px;
         }
 
-        /* Each Image Container */
+        .image-gallery {
+            width: 100%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 1vw;
+        }
+
         .image-item {
             position: relative;
             cursor: pointer;
-            width: 100%;
-            height: 200px; /* Fixed height for each image item */
-            max-width: 100%;
-            max-height: 200px;
+            width: 25vw; /* Equal width */
+            height: 25vw; /* Equal height (to make square images) */
+            max-width: 250px; /* Max size */
+            max-height: 250px; /* Max size */
             display: flex;
             justify-content: center;
             align-items: center;
             overflow: hidden;
-            /* Removed border-radius to make it sharp-edged */
-            border-radius: 0;
         }
 
         .image-item img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
-            /* Removed border-radius here too */
-            border-radius: 0;
+            object-fit: cover; /* Ensures the image covers the entire container without stretching */
+            border-radius: 4px;
         }
 
         /* Modal (Full-Screen View) */
@@ -100,7 +91,7 @@
             max-height: 100%;
             width: auto;
             height: auto;
-            border-radius: 0; /* No border-radius */
+            border-radius: 4px;
         }
 
         .modal-close {
@@ -132,17 +123,20 @@
 
         /* Mobile Responsiveness */
         @media (max-width: 768px) {
-            .image-gallery {
-                grid-template-columns: repeat(2, 1fr); /* 2 columns for medium screens */
-            }
             .image-item {
-                height: 150px;
+                width: 40vw; /* Adjusted width for medium screens */
+                height: 40vw; /* Same height */
+                max-width: 200px;
+                max-height: 200px;
             }
         }
 
         @media (max-width: 480px) {
             .image-item {
-                height: 120px; /* Further adjustment for smaller screens */
+                width: 50vw; /* Adjusted width for smaller screens */
+                height: 50vw; /* Same height */
+                max-width: 150px;
+                max-height: 150px;
             }
         }
 
@@ -182,10 +176,9 @@
 
     <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
 
-    <!-- Separate Container for Image Group 1 -->
-    <div class="gallery-container">
-        <h2 style="text-align:center;">Group 1</h2>
+    <div class="image-gallery-container">
         <div class="image-gallery">
+            <!-- Each image is now placed in the image-item container -->
             <div class="image-item" onclick="openModal(0)">
                 <img src="./gallery/aa.jpg" alt="Image 1">
             </div>
@@ -195,24 +188,39 @@
             <div class="image-item" onclick="openModal(2)">
                 <img src="./gallery/jj.jpg" alt="Image 3">
             </div>
-        </div>
-    </div>
-
-    <!-- Separate Container for Image Group 2 -->
-    <div class="gallery-container">
-        <h2 style="text-align:center;">Group 2</h2>
-        <div class="image-gallery">
             <div class="image-item" onclick="openModal(3)">
                 <img src="./gallery/kk.jpg" alt="Image 4">
             </div>
+            <!-- Additional Images -->
             <div class="image-item" onclick="openModal(4)">
-                <img src="./gallery/ss.jpg" alt="Image 5">
+                <img src="./gallery/zz.jpg" alt="Image 5">
             </div>
             <div class="image-item" onclick="openModal(5)">
-                <img src="./gallery/pp.jpg" alt="Image 6">
+                <img src="./gallery/xx.jpg" alt="Image 6">
             </div>
-            <div class="image-item" onclick="openModal(6)">
-                <img src="./gallery/tt.jpg" alt="Image 7">
+        </div>
+    </div>
+     <div class="image-gallery-container">
+        <div class="image-gallery">
+            <!-- Each image is now placed in the image-item container -->
+            <div class="image-item" onclick="openModal(0)">
+                <img src="./gallery/aa.jpg" alt="Image 1">
+            </div>
+            <div class="image-item" onclick="openModal(1)">
+                <img src="./gallery/ff.jpg" alt="Image 2">
+            </div>
+            <div class="image-item" onclick="openModal(2)">
+                <img src="./gallery/jj.jpg" alt="Image 3">
+            </div>
+            <div class="image-item" onclick="openModal(3)">
+                <img src="./gallery/kk.jpg" alt="Image 4">
+            </div>
+            <!-- Additional Images -->
+            <div class="image-item" onclick="openModal(4)">
+                <img src="./gallery/zz.jpg" alt="Image 5">
+            </div>
+            <div class="image-item" onclick="openModal(5)">
+                <img src="./gallery/xx.jpg" alt="Image 6">
             </div>
         </div>
     </div>
@@ -234,9 +242,8 @@
             { src: "./gallery/ff.jpg", caption: "Caption for Image 2" },
             { src: "./gallery/jj.jpg", caption: "Caption for Image 3" },
             { src: "./gallery/kk.jpg", caption: "Caption for Image 4" },
-            { src: "./gallery/ss.jpg", caption: "Caption for Image 5" },
-            { src: "./gallery/pp.jpg", caption: "Caption for Image 6" },
-            { src: "./gallery/tt.jpg", caption: "Caption for Image 7" }
+            { src: "./gallery/zz.jpg", caption: "Caption for Image 5" },
+            { src: "./gallery/xx.jpg", caption: "Caption for Image 6" }
         ];
 
         function openModal(index) {
@@ -287,7 +294,6 @@
             });
         });
     </script>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
