--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -40,7 +40,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            gap: 1vw;
+            gap: 0.1vw;
         }
 
         .image-item {
@@ -199,6 +199,24 @@
             <!-- Each image is now placed in the image-item container -->
             <div class="image-item" onclick="openModal(0)">
                 <img src="./gallery/aa.jpg" alt="Image 1">
+            </div>
+               <div class="image-item" onclick="openModal(1)">
+                <img src="./gallery/ff.jpg" alt="Image 2">
+            </div>
+            <div class="image-item" onclick="openModal(2)">
+                <img src="./gallery/jj.jpg" alt="Image 3">
+            </div>
+            <div class="image-item" onclick="openModal(3)">
+                <img src="./gallery/kk.jpg" alt="Image 4">
+            </div>
+               <div class="image-item" onclick="openModal(1)">
+                <img src="./gallery/ff.jpg" alt="Image 2">
+            </div>
+            <div class="image-item" onclick="openModal(2)">
+                <img src="./gallery/jj.jpg" alt="Image 3">
+            </div>
+            <div class="image-item" onclick="openModal(3)">
+                <img src="./gallery/kk.jpg" alt="Image 4">
             </div>
             <div class="image-item" onclick="openModal(1)">
                 <img src="./gallery/ff.jpg" alt="Image 2">
