--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -201,33 +201,32 @@
                 <img src="./gallery/aa.jpg" alt="Image 1">
             </div>
                <div class="image-item" onclick="openModal(1)">
-                <img src="./gallery/ff.jpg" alt="Image 2">
+                <img src="./gallery/bb.jpg" alt="Image 2">
             </div>
             <div class="image-item" onclick="openModal(2)">
-                <img src="./gallery/jj.jpg" alt="Image 3">
+                <img src="./gallery/cc.jpg" alt="Image 3">
             </div>
             <div class="image-item" onclick="openModal(3)">
-                <img src="./gallery/kk.jpg" alt="Image 4">
+                <img src="./gallery/dd.jpg" alt="Image 4">
             </div>
                <div class="image-item" onclick="openModal(1)">
-                <img src="./gallery/ff.jpg" alt="Image 2">
+                <img src="./gallery/ee.jpg" alt="Image 2">
             </div>
             <div class="image-item" onclick="openModal(2)">
-                <img src="./gallery/jj.jpg" alt="Image 3">
+                <img src="./gallery/ff.jpg" alt="Image 3">
             </div>
             <div class="image-item" onclick="openModal(3)">
-                <img src="./gallery/kk.jpg" alt="Image 4">
+                <img src="./gallery/gg.jpg" alt="Image 4">
             </div>
             <div class="image-item" onclick="openModal(1)">
-                <img src="./gallery/ff.jpg" alt="Image 2">
+                <img src="./gallery/hh.jpg" alt="Image 2">
             </div>
             <div class="image-item" onclick="openModal(2)">
-                <img src="./gallery/jj.jpg" alt="Image 3">
+                <img src="./gallery/ii.jpg" alt="Image 3">
             </div>
             <div class="image-item" onclick="openModal(3)">
-                <img src="./gallery/kk.jpg" alt="Image 4">
+                <img src="./gallery/jj.jpg" alt="Image 4">
             </div>
-            <!-- Additional Images -->
             <div class="image-item" onclick="openModal(4)">
                 <img src="./gallery/zz.jpg" alt="Image 5">
             </div>
@@ -251,11 +250,16 @@
         let currentImageIndex = 0;
         const images = [
             { src: "./gallery/aa.jpg", caption: "Caption for Image 1" },
-            { src: "./gallery/ff.jpg", caption: "Caption for Image 2" },
-            { src: "./gallery/jj.jpg", caption: "Caption for Image 3" },
-            { src: "./gallery/kk.jpg", caption: "Caption for Image 4" },
-            { src: "./gallery/zz.jpg", caption: "Caption for Image 5" },
-            { src: "./gallery/xx.jpg", caption: "Caption for Image 6" }
+            { src: "./gallery/bb.jpg", caption: "Caption for Image 2" },
+            { src: "./gallery/cc.jpg", caption: "Caption for Image 3" },
+            { src: "./gallery/dd.jpg", caption: "Caption for Image 4" },
+            { src: "./gallery/ee.jpg", caption: "Caption for Image 5" },
+            { src: "./gallery/ff.jpg", caption: "Caption for Image 6" },
+             { src: "./gallery/gg.jpg", caption: "Caption for Image 7" },
+             { src: "./gallery/hh.jpg", caption: "Caption for Image 8" },
+             { src: "./gallery/ii.jpg", caption: "Caption for Image 9" },
+           { src: "./gallery/jj.jpg", caption: "Caption for Image 10" },
+           { src: "./gallery/kk.jpg", caption: "Caption for Image 11" }
         ];
 
         function openModal(index) {
