--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -202,6 +202,23 @@
                 <img src="./gallery/kk.jpg" alt="Image 4">
             </div>
         </div>
+
+        <div class="image-gallery-container">
+        <div class="image-gallery">
+            <!-- Each image is now placed in the image-item container -->
+            <div class="image-item" onclick="openModal(4)">
+                <img src="./gallery/aa.jpg" alt="Image 1">
+            </div>
+            <div class="image-item" onclick="openModal(5)">
+                <img src="./gallery/bb.jpg" alt="Image 2">
+            </div>
+            <div class="image-item" onclick="openModal(6)">
+                <img src="./gallery/cc.jpg" alt="Image 3">
+            </div>
+            <div class="image-item" onclick="openModal(7)">
+                <img src="./gallery/dd.jpg" alt="Image 4">
+            </div>
+        </div>
     </div>
 
     <!-- Modal for Full Image View -->
