--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -186,9 +186,10 @@
 
     <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
 
+    <!-- First Image Gallery -->
     <div class="image-gallery-container">
+        <h2>Gallery 1</h2>
         <div class="image-gallery">
-            <!-- Each image is now placed in the image-item container -->
             <div class="image-item" onclick="openModal(0)">
                 <img src="./gallery/aa.jpg" alt="Image 1">
             </div>
@@ -202,21 +203,23 @@
                 <img src="./gallery/kk.jpg" alt="Image 4">
             </div>
         </div>
+    </div>
 
-        <div class="image-gallery-container">
+    <!-- Second Image Gallery -->
+    <div class="image-gallery-container">
+        <h2>Gallery 2</h2>
         <div class="image-gallery">
-            <!-- Each image is now placed in the image-item container -->
             <div class="image-item" onclick="openModal(4)">
-                <img src="./gallery/aa.jpg" alt="Image 1">
+                <img src="./gallery/aa.jpg" alt="Image 5">
             </div>
             <div class="image-item" onclick="openModal(5)">
-                <img src="./gallery/bb.jpg" alt="Image 2">
+                <img src="./gallery/bb.jpg" alt="Image 6">
             </div>
             <div class="image-item" onclick="openModal(6)">
-                <img src="./gallery/cc.jpg" alt="Image 3">
+                <img src="./gallery/cc.jpg" alt="Image 7">
             </div>
             <div class="image-item" onclick="openModal(7)">
-                <img src="./gallery/dd.jpg" alt="Image 4">
+                <img src="./gallery/dd.jpg" alt="Image 8">
             </div>
         </div>
     </div>
@@ -243,14 +246,6 @@
             { src: "./gallery/bb.jpg", caption: "Caption for Image 6" },
             { src: "./gallery/cc.jpg", caption: "Caption for Image 7" },
             { src: "./gallery/dd.jpg", caption: "Caption for Image 8" },
-            { src: "./gallery/ee.jpg", caption: "Caption for Image 9" },
-            { src: "./gallery/ff.jpg", caption: "Caption for Image 10" },
-            { src: "./gallery/gg.jpg", caption: "Caption for Image 11" },
-            { src: "./gallery/hh.jpg", caption: "Caption for Image 12" },
-            { src: "./gallery/ii.jpg", caption: "Caption for Image 13" },
-            { src: "./gallery/jj.jpg", caption: "Caption for Image 14" },
-            { src: "./gallery/zz.jpg", caption: "Caption for Image 15" },
-            { src: "./gallery/xx.jpg", caption: "Caption for Image 16" }
         ];
 
         function openModal(index) {
