--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -180,7 +180,7 @@
         <div class="image-gallery">
             <!-- First set of images -->
             <div class="image-item" onclick="openModal(0)">
-                <img src="./gallery/aa.jpg" alt="Image 13">
+                <img src="./gallery/aa.jpg" alt="Image 1">
             </div>
             <div class="image-item" onclick="openModal(1)">
                 <img src="./gallery/ff.jpg" alt="Image 2">
@@ -249,7 +249,23 @@
     <script>
         let currentImageIndex = 0;
         const images = [
-       
+            { src: "./gallery/aa.jpg", caption: "Caption for Image 1" },
+            { src: "./gallery/ff.jpg", caption: "Caption for Image 2" },
+            { src: "./gallery/jj.jpg", caption: "Caption for Image 3" },
+            { src: "./gallery/kk.jpg", caption: "Caption for Image 4" },
+            { src: "./gallery/aa.jpg", caption: "Caption for Image 5" },
+            { src: "./gallery/bb.jpg", caption: "Caption for Image 6" },
+            { src: "./gallery/cc.jpg", caption: "Caption for Image 7" },
+            { src: "./gallery/dd.jpg", caption: "Caption for Image 8" },
+            { src: "./gallery/ee.jpg", caption: "Caption for Image 9" },
+            { src: "./gallery/ff.jpg", caption: "Caption for Image 10" },
+            { src: "./gallery/gg.jpg", caption: "Caption for Image 11" },
+            { src: "./gallery/hh.jpg", caption: "Caption for Image 12" },
+            { src: "./gallery/ii.jpg", caption: "Caption for Image 13" },
+            { src: "./gallery/jj.jpg", caption: "Caption for Image 14" },
+            { src: "./gallery/zz.jpg", caption: "Caption for Image 15" },
+            { src: "./gallery/xx.jpg", caption: "Caption for Image 16" }
+        ];
 
         function openModal(index) {
             currentImageIndex = index;
