--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -179,6 +179,7 @@
     <div class="image-gallery-container">
         <div class="image-gallery">
             <!-- First set of images -->
+            <div class="caption">Image 1</div>
             <div class="image-item" onclick="openModal(0)">
                 <img src="./gallery/aa.jpg" alt="Image 1">
             </div>
