--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -175,7 +175,7 @@
     </nav>
 
     <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
-
+ <h4 style="text-align:center; font-size: 2rem; font-color : red;">Image Gallery</h4>
     <div class="image-gallery-container">
         
         <div class="image-gallery">
