--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -187,9 +187,9 @@
     </nav>
 
     <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
- <p style="text-align:center; font-size: 2rem; font-color : red;">Image Gallery</p>
+ <h style="text-align:center; font-size: 1rem; font-color : red;">Image Gallery</h4>
     <div class="image-gallery-container">
-        
+        <h style="text-align:center; font-size: 1rem; font-color : red;">Image Gallery</h4>
         <div class="image-gallery">
             <!-- First set of images -->
            
