--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -187,8 +187,9 @@
     </nav>
 
     <h1 style="text-align:center; font-size: 2rem;">Image Gallery</h1>
- <h style="text-align:center; font-size: 1rem; font-color : red;">Image Gallery</h4>
+
     <div class="image-gallery-container">
+        <h4 style="text-align:center; font-size: 1rem; color: red;">Image Gallery</h4>
         <div class="image-gallery">
             <!-- First set of images -->
            
@@ -209,6 +210,7 @@
     </div>
 
     <div class="image-gallery-container">
+        <h4 style="text-align:center; font-size: 1rem; color: red;">2023 to 2024</h4>
         <div class="image-gallery">
             <!-- Second set of images -->
             <div class="image-item" onclick="openModal(4)">
