--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -191,7 +191,29 @@
     <div class="image-gallery-container">
         <h4 style="text-align:center; font-size: 1rem; color: red;">Visit of Prof Muhammad Suliman Siyal Director College Education Shaheed Benazirabad Region<br>7-3-25</h4>
         <div class="image-gallery">
-            <!-- Image Items Here -->
+                   <div class="image-item" onclick="openModal(0)">
+                <img src="./gallery/SB1.jpg" alt="Image 1">
+                <div class="caption">Image 1 Caption</div>
+            </div>
+            <div class="image-item" onclick="openModal(1)">
+                <img src="./gallery/SB2.jpg" alt="Image 2">
+            </div>
+            <div class="image-item" onclick="openModal(2)">
+                <img src="./gallery/SB3.jpg" alt="Image 3">
+            </div>
+            <div class="image-item" onclick="openModal(3)">
+                <img src="./gallery/SB4.jpg" alt="Image 4">
+            </div>
+             <div class="image-item" onclick="openModal(4)">
+                <img src="./gallery/SB5.jpg" alt="Image 3">
+            </div>
+             <div class="image-item" onclick="openModal(5)">
+                <img src="./gallery/SB6.jpg" alt="Image 3">
+            </div>
+             <div class="image-item" onclick="openModal(6)">
+                <img src="./gallery/SB7.jpg" alt="Image 3">
+            </div>
+        
         </div>
     </div>
 
